operator/pkg/model/ingestion/testdata/gateway/http_skips_backends_missing_port/input-httproute.yaml
- metadata:
    creationTimestamp: null
    name: http
    namespace: app-ns
  spec:
    parentRefs:
    - name: platform
      sectionName: http
    rules:
    - backendRefs:
      - name: backend
  status:
    parents: null
