operator/pkg/model/ingestion/testdata/gateway/http_skips_backends_missing_port/output-listeners.yaml
- hostname: "*"
  name: http
  port: 80
  protocol: HTTP
  routes:
  - direct_response:
      status_code: 500
    path_match: {}
    timeout: {}
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    namespace: app-ns
    version: v1
- hostname: "*"
  name: grpc
  port: 81
  protocol: HTTP
  routes:
  - direct_response:
      status_code: 500
    path_match: {}
    timeout: {}
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    namespace: app-ns
    version: v1
- hostname: "*"
  name: tls
  port: 443
  protocol: TLS
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: platform
    namespace: app-ns
    version: v1
